--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
     - "2.7"
     - "3.4"
-script: python ./setup.py install
+script: python ./setup.py install && python ./test/test.py
